--- a/renderer/index.html
+++ b/renderer/index.html
@@ -25,7 +25,7 @@
     <div class="container d-grid gap-2 mt-4">
       <h1 id="message">我的播放器</h1>
       <button id="add-music-button" class="btn btn-primary mt-4" type="button">
-        添加歌曲到曲库
+        添加歌曲到曲库 0
       </button>
       <div id="tracksList" class="mt-4"></div>
     </div>
