--- a/renderer/index.html
+++ b/renderer/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <link>
     <meta charset="UTF-8" />
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <!-- <meta
@@ -15,6 +15,7 @@
       href="../node_modules/font-awesome/css/font-awesome.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./index.css" />
     <script
       src="https://kit.fontawesome.com/1c12ebc6a5.js"
       crossorigin="anonymous"
