--- a/renderer/index.html
+++ b/renderer/index.html
@@ -22,13 +22,21 @@
     ></script>
     <title>音乐播放器</title>
   </head>
+
   <body>
     <div class="container d-grid gap-2 mt-4">
       <h1 id="message">我的播放器</h1>
       <button id="add-music-button" class="btn btn-primary mt-4" type="button">
-        添加歌曲到曲库 0
+        添加歌曲到曲库
       </button>
       <div id="tracksList" class="mt-4"></div>
+    </div>
+    <div class="container fixed-bottom bg-white pb-4">
+      <br />
+      <div class="row my-2 " id="player-status"></div>
+      <div class="progress" role="progressbar">
+        <div class="progress-bar bg-success" id="player-progress" style="width: 0">0%</div>
+      </div>
     </div>
     <script>
       require("./index.js");
